<resources>
    <string name="about_app_name">口袋书签</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="loading">加载中…</string>
    <string name="no_load_more">没有更多数据了</string>
    <string name="text_add">添加</string>
    <string name="text_detail">详情</string>
    <string name="iten_name_hint">名称：</string>
    <string name="item_pasword_hint">密码：</string>
    <string name="copy_success">密码复制成功</string>
    <string name="not_root_hint">请先获取Root权限...</string>
    <string name="not_root_hint_txt">请确保本程序已获取Root权限，若没有Root权限，请下载第三方工具进行Root,推荐使用KingRoot!</string>
    <string name="empty_password">无密码</string>
    <string name="finger_press">完成后松开手指</string>
    <string name="finger_up_first_error">至少连接4个点，请重试</string>
    <string name="finger_up_first_success">请在次绘制解锁图案</string>
    <string name="finger_up_second_error">与上次输入不一致，请重试</string>
    <string name="finger_up_second_success">绘制成功</string>
    <string name="check_error">密码错误，请重试</string>
    <string name="lockscreen_access_pattern_start">"Draw an unlock pattern"</string>
    <string name="lockscreen_access_pattern_cleared">"Pattern Ereased"</string>
    <string name="lockscreen_access_pattern_cell_added">"已添加单元格"</string>
    <string name="lockscreen_access_pattern_detected">"Pattern Saved"</string>
    <string name="share_title">分享</string>
    <string name="share_article_url">%1$s分享【%2$s】：%3$s</string>
    <string name="share_type_url">%1$s分享【%2$s】专题：http://www.wanandroid.com/article/list/0?cid=%3$d</string>
    <string name="copy_link_to_clipboard">已复制到剪贴板</string>
    <string name="copy_link">复制链接</string>
    <string name="version">1.6</string>
    <string name="about_msg">此应用是基于MVP模式实现的，使用了多种主流框架，具有很大的学习意义，且功能实用。
       \n主要用到的开源库：RxJava2、Retrofit2、Butterknife、Greendao、Glide等。
    </string>
    <string name="str_copyright">Copyright \u00a9  2018-%1$s Kelly. All Rights Reserved</string>
    <string name="text_author">作者：</string>
    <string name="uncheck">在途中</string>
    <string name="ischeck">已签收</string>
    <string name="input_post_id">请输入或扫描运单号</string>
    <string name="no_history">暂时没有记录</string>
    <string name="tips">温馨提示</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="sure_delete_history">您要删除该条记录吗？</string>
    <string name="personality">这家伙很懒,什么都没有留下…</string>
    <string name="nb.bookshelf.book_not_exist">文件不存在或者内容为空,是否删除?</string>
    <string name="nb.search.book.brief">%1$d人在追 | %2$s读者留存 | %3$s著</string>
    <string name="nb.common.tip">提示</string>
    <string name="nb.common.sure">确定</string>
    <string name="nb.common.cancel">取消</string>
    <string name="nb.mode.night">夜间</string>
    <string name="nb.mode.morning">日间</string>
    <string name="nb.read.comment">书评</string>
    <string name="nb.read.brief">简介</string>
    <string name="nb.read.setting">设置</string>
    <string name="nb.read.download">缓存</string>
    <string name="nb.read.category">目录</string>
    <string name="nb.read.no_chapter">第 %1$d 章(%2$d)</string>
    <string-array name="conversion_type_array">
        <item>不转换</item>
        <item>台湾正体到简体(大陆常用词汇)</item>
        <item>简体到香港繁体</item>
        <item>简体到繁体</item>
        <item>简体到台湾正体</item>
        <item>简体到繁体(台湾常用词汇)</item>
        <item>繁体到香港繁体</item>
        <item>繁体到简体</item>
        <item>繁体到台湾正体</item>
        <item>台湾正体到简体</item>
        <item>香港繁体到简体</item>
    </string-array>
    <string name="nb.book.type">[%1$s]</string>
    <string name="nb.book.recommend">%1$d 人推荐</string>
    <string name="nb.book.message">%1$d人在追 |&#160; %2$s%%读者留存</string>
    <string name="nb.book.word">|&#160;%1$d&#160;万字</string>
    <string name="nb.book_detail.hot_comment">热门书评</string>
    <string name="nb.book_detail.community">%1$s的社区</string>
    <string name="nb.book_detail.posts_count">共有%1$d个帖子</string>
    <string name="nb.book_detail.recommend_book_list">喜欢这本书的也喜欢</string>
    <string name="nb.book_detail.chase_update">追更</string>
    <string name="nb.book_detail.give_up">放弃</string>
    <string name="nb.book_detail.start_read">开始阅读</string>
    <string name="nb.fragment.book_list.message">共%1$d本书 |&#160; %2$d人收藏</string>
    <string name="nb.user.lv">&#160;lv.%1$d</string>
    <string name="nb.file.sub_count">%1$d 项</string>
    <string name="nb.file.path">存储卡:%1$s</string>
    <string name="nb.file.add_shelf">加入书架</string>
    <string name="nb.file.add_shelves">加入书架(%1$d)</string>
    <string name="nb.file.add_succeed">成功添加%1$d本书</string>
    <string name="bottom_tab_home">首页</string>
    <string name="bottom_tab_category">分类</string>
    <string name="bottom_tab_tool">工具</string>
    <string name="my_card">我的名片</string>
    <string name="my_collection">我的收藏</string>
    <string name="google_bookmark">Google书签</string>
    <string name="other">其它</string>
    <string name="subject_change">主题更换</string>
    <string name="scan">扫一扫</string>
    <string name="settings">设置</string>
    <string name="tool_account_manager">账号密码管理</string>
    <string name="tool_wifi_query">wifi密码查看</string>
    <string name="tool_balance_query">普卡余额查询</string>
    <string name="tool_shenzhen_subway">深圳地铁站点</string>
    <string name="tool_my_express">我的快递</string>
    <string name="tool_cartoon">漫画看看</string>
    <string name="tool_novel_read">小说阅读</string>
    <string name="tool_zhihu_daily">知乎日报</string>
    <string name="setting_basic">基本设置</string>
    <string name="setting_ap_visible">打开即可显示账号的密码</string>
    <string name="setting_ap">账号的密码可见</string>
    <string name="setting_open_gesture">打开手势密码</string>
    <string name="setting_gesture_pwd">设置手势密码</string>
    <string name="setting_update_gesture_pwd">修改手势密码</string>
    <string name="setting_change_language">更换语言</string>
    <string name="setting_change_subject">更换主题</string>
    <string name="setting_update_bookmark">更新书签</string>
    <string name="setting_backup_sync_collection">备份与同步收藏</string>
    <string name="setting_clear_browse_history">清除浏览记录</string>
    <string name="setting_clear_summary">清除所有文章浏览记录</string>
    <string name="setting_product_information">产品信息</string>
    <string name="setting_copyright_information">版权信息</string>
    <string name="setting_check_update">检查更新</string>
    <string name="setting_share_application">分享应用</string>
    <string name="setting_about">关于</string>
    <string name="setting_sync">同步设置</string>
    <string name="setting_backup_recover">备份与恢复</string>
    <string name="setting_sync_now">立即同步</string>
    <string name="setting_auto_backup">自动备份</string>
    <string name="setting_auto_backup_summary">进入应用后智能本地备份</string>
    <string name="setting_local_backup">本地备份</string>
    <string name="setting_local_recover">本地恢复</string>
    <string name="title_about">@string/setting_about</string>
    <string name="title_setting">设置</string>
    <string name="title_setting_gesture_pwd">设置手势密码</string>
    <string name="title_change_subject">更换主题</string>
    <string name="title_backup_sync">备份与同步</string>
    <string name="title_note">笔记</string>
    <string name="title_express_query">快递查询</string>
    <string name="title_history_record">历史记录</string>
    <string name="title_choose_express_company">选中快递公司</string>
    <string name="title_book_import">书籍导入</string>
    <string name="title_read_setting">阅读设置</string>
    <string name="title_book_comment">书评</string>
    <string name="title_book_detail">书籍详情</string>
    <string name="title_signature">个性签名</string>
    <string name="title_search_result">搜索结果</string>
    <string name="menu_share">分享</string>
    <string name="menu_favorite">收藏</string>
    <string name="menu_copy_link">复制链接</string>
    <string name="menu_open_with_browse">在浏览器打开</string>
    <string name="menu_refresh">刷新</string>
    <string name="dark_mode">深色模式</string>
    <string name="mode_auto">跟随系统</string>
    <string name="mode_normal">普通模式</string>
    <string name="mode_dark">@string/dark_mode</string>
    <string name="tool_barrage">弹幕</string>
    <string name="tool_speed_detection">测速</string>
    <string name="nb.book_detail_previous_chapter">上一章</string>
    <string name="nb.book_detail_next_chapter">下一章</string>
    <string name="delete">删除</string>
    <string name="select_all">全选</string>
    <string name="smart_import">智能导入</string>
    <string name="cellphone_dir">手机目录</string>
    <string name="select_all_cancel">取消全选</string>
    <string name="transpond">转发</string>
    <string name="top">置顶</string>
    <string name="more">更多</string>
    <string name="save">保存</string>
    <string name="share_with_friends">分享给朋友</string>
    <string name="delete_hint">删除后不可恢复，是否删除该条目？</string>
    <string name="delete_hint2">删除后不可恢复，是否删除这%1$d个条目？</string>
    <string name="Selected">已选择</string>
    <string name="top_cancel">取消置顶</string>
    <string name="search">搜索</string>
    <string name="search_collection">搜索收藏内容</string>
    <string name="no_item">暂无条目</string>
    <string name="title">标题</string>
    <string name="content">内容</string>
    <string name="label_database">数据库</string>
    <string name="label_front_end">前端</string>
    <string name="label_app_store">应用商店</string>
    <string name="label_other">其它</string>
    <string name="label_basic_knowledge">基础知识</string>
    <string name="label_push">推送</string>
    <string name="label_css">CSS</string>
    <string name="label_h5">H5</string>
    <string name="label_website">网站</string>
    <string name="delete_hint3">确定清空历史搜索记录？</string>
    <string name="input_search_content">请输入搜索内容</string>
    <string name="hot_word">搜索热词</string>
    <string name="history_search">历史搜索</string>
    <string name="clear_historical_search_records">清除历史搜索记录</string>
    <string name="skin_default">默认</string>
    <string name="skin_noble_brown">高贵棕</string>
    <string name="skin_cool_black">酷炫黑</string>
    <string name="skin_passion_red">激情红</string>
    <string name="skin_comfortable_green">舒适绿</string>
    <string name="skin_vibrant_orange">活力橙</string>
    <string name="skin_elegant_grey">高雅灰</string>
    <string name="skin_change_hint">当前处于深色模式，请先设置为正常模式</string>
    <string name="skin_update_success">更新成功</string>
    <string name="skin_theme_change_success">主题更换成功</string>
    <string name="skin_theme_change_fail">主题更换失败</string>
    <string name="person_center">个人中心</string>
    <string name="person_head_portrait">头像</string>
    <string name="person_nickname">昵称</string>
    <string name="person_sex">性别</string>
    <string name="person_mobile_number">手机号</string>
    <string name="person_personal_signature">个性签名</string>
    <string name="woman">女</string>
    <string name="man">男</string>
    <string name="save_user_info_hint">确定保存用户信息?</string>
    <string name="save_success">保存成功</string>
    <string name="update_success">更新成功</string>
    <string name="take_photo">拍照</string>
    <string name="choose_album">从手机相册选择</string>
    <string name="tailor">裁剪</string>
    <string name="update_nickname">修改昵称</string>
    <string name="word_full">字数已满</string>
    <string name="submit">提交</string>
    <string name="leave_your_signature">留下您的签名...</string>
    <string name="input_char_limit_hint">还可以输入120字</string>
    <string name="input_empty_hint">字符不能为空</string>
    <string name="input_hint">还可以输入%1$d字</string>
    <string name="hot_search">热门搜索</string>
    <string name="account_in_use">在用</string>
    <string name="account_idle">闲置</string>
    <string name="account_invalid">作废</string>
    <string name="account_number">账号</string>
    <string name="password">密码</string>
    <string name="mailbox">邮箱</string>
    <string name="cellphone">手机</string>
    <string name="category">类别</string>
    <string name="status">状态</string>
    <string name="remark">备注</string>
    <string name="password_memo_info">密码备忘信息</string>
    <string name="item_encryption_type">加密类型：</string>
    <string name="menu_data_statistics">数据统计</string>
</resources>