<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".ui.activity.AccountEditActivity">

    <include layout="@layout/toolbar_scroll" />


    <ScrollView
        android:id="@+id/sv_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/item_bg"
            android:orientation="vertical"
            android:padding="2dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/met_title"
                    style="@style/EditTextTheme"
                    android:hint="@string/title"
                    android:lineSpacingExtra="4dp"
                    android:maxLength="20"
                    android:layout_marginLeft="5dp"
                    app:met_clearButton="true"
                    app:met_primaryColor="@color/colorPrimary"
                    app:met_textColor="@color/cl_et_text"
                    app:met_textColorHint="@color/cl_et_text_color" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account_number" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/met_userName"
                    style="@style/EditTextTheme"
                    android:digits="0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ@._"
                    android:hint="@string/account_number"
                    android:lineSpacingExtra="0dp"
                    android:maxLength="20"
                    android:layout_marginLeft="5dp"
                    app:met_clearButton="true"
                    app:met_primaryColor="@color/colorPrimary"
                    app:met_textColor="@color/cl_et_text"
                    app:met_textColorHint="@color/cl_et_text_color" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/met_password"
                    style="@style/EditTextTheme"
                    android:layout_weight="0.8"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:lineSpacingExtra="4dp"
                    android:maxLength="20"
                    android:layout_marginLeft="5dp"
                    app:met_clearButton="true"
                    app:met_primaryColor="?attr/colorPrimary"
                    app:met_textColor="@color/cl_et_text"
                    app:met_textColorHint="@color/cl_et_text_color" />

                <CheckBox
                    android:id="@+id/cb_eye"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/custom_watch_psw_selector"
                    android:button="@null"
                    android:checked="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mailbox" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/met_userEmail"
                    style="@style/EditTextTheme"
                    android:hint="@string/mailbox"
                    android:inputType="textEmailAddress"
                    android:lineSpacingExtra="0dp"
                    android:maxLength="20"
                    app:met_clearButton="true"
                    android:layout_marginLeft="5dp"
                    app:met_primaryColor="?attr/colorPrimary"
                    app:met_textColor="@color/cl_et_text"
                    app:met_textColorHint="@color/cl_et_text_color" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cellphone" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/met_userPhone"
                    style="@style/EditTextTheme"
                    android:hint="@string/cellphone"
                    android:inputType="number"
                    android:lineSpacingExtra="0dp"
                    android:maxLength="11"
                    app:met_clearButton="true"
                    android:layout_marginLeft="5dp"
                    app:met_primaryColor="?attr/colorPrimary"
                    app:met_textColor="@color/cl_et_text"
                    app:met_textColorHint="@color/cl_et_text_color" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category" />

                <org.angmarch.views.NiceSpinner
                    android:id="@+id/np_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:layout_marginLeft="5dp"
                    app:arrowTint="@color/cl_ns_arrowTint"
                    app:backgroundSelector="@drawable/background_selector" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status" />

                <org.angmarch.views.NiceSpinner
                    android:id="@+id/np_state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:layout_marginLeft="5dp"
                    app:arrowTint="@color/cl_ns_arrowTint"
                    app:backgroundSelector="@drawable/background_selector" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remark" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/met_remark"
                    style="@style/EditTextTheme"
                    android:hint="@string/password_memo_info"
                    android:lineSpacingExtra="4dp"
                    app:met_clearButton="true"
                    app:met_maxCharacters="150"
                    app:met_minCharacters="0"
                    android:layout_marginLeft="5dp"
                    app:met_primaryColor="?attr/colorPrimary"
                    app:met_textColor="@color/cl_et_text"
                    app:met_textColorHint="@color/cl_et_text_color" />
            </LinearLayout>

            <TextView
                android:id="@+id/timeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/light_grey"
                android:visibility="gone"
                tools:text="" />
        </LinearLayout>
    </ScrollView>

    <com.balysv.materialripple.MaterialRippleLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:mrl_rippleColor="?attr/colorPrimary"
        app:mrl_rippleDuration="200"
        app:mrl_rippleOverlay="true">

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/delete_btn_bg"
            android:text="@string/delete"
            android:textColor="@android:color/white"
            android:visibility="gone" />
    </com.balysv.materialripple.MaterialRippleLayout>
</LinearLayout>
